12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (2003.nn.nn):
=======================

- Applied patches:
  - iometer-2003.02.15-NoPipe.patch by Daniel Scheibli (removes the 
    Windows Pipes support for communication which simplifies the code).
  - iometer-2003.02.15_Get_NI_Counter.patch by Joe Eiler (brings the
    handling for network interfaces that does not contain statistics
    in /proc/net/dev - as for example with Intel Link Aggreation).    
  - iometer-2003.02.15_Exclude_Filesys.patch by Joe Eiler (additional
    command line parameter for Dynamo to pass into file systems which
    should be hidden).
  - iometer-2003.02.15_Extra_Processor_Info.patch by Joe Eiler (brings
    new processor speed values as well as improvements for the GHz CPU
    detection).
- Cleanup:
   - Dropped the IOCq.cpp file, because it was empty.
- Others:
   - Added the output of the major and minor number during the detection
     of the sector size (of physical disks).
   - Rewrite of the .../README file (containing additions for the Iometer
     User's Guide as well as text for a future Developers Guide).



ChangeLog (2003.02.15):
=======================

- Applied patches:
   - iometer.patch by Matt D. Robinson (ensures, that there is an allocated
     buffer for each worker thread - needed for large amounts of I/O through
     ServerWorks chipsets).
- Bugfixes:
   - Different changes to get Dynamo compiled with gcc 3.2 - in the past there
     was some problem known as cout << hex error (include <sstream> instead of
     include <strstream.h> etc).
   - Modified the sector size detection for physical disks under Linux in that
     way, that major and minor number are recognised (was the major number
     only).